Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigBlandWithBadCharacters-0.calc
a .0%E23 b 1.%E25 c 2.3%E31 d 34.5%E45 e 6.78%E73 f 99.99%E56 g 3%E93 h 76%E45
